src/rules/snapshots/pg_migration_lint__rules__pgm015__tests__drop_fk_column_fires.snap
---
source: src/rules/pgm015.rs
assertion_line: 136
expression: findings
---
- rule_id: PGM015
  severity: Minor
  message: "Dropping column 'customer_id' from table 'orders' silently removes foreign key 'fk_orders_customer' referencing 'customers'. Verify that the referential integrity guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
